# BursaAdvisor

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml
.streamlit/: config.toml
docs/: BURSA_DECLARATIVE_KB.md  SECTION_6_7_ARCHITECTURE.md  SECTOR_GUIDE.md
src/bursaadvisor/: __main__.py  constants.py  engine.py  enums.py  facts.py
src/bursaadvisor/data/: config_loader.py  macro_fetcher.py  peer_benchmark.py  stock_fetcher.py
src/bursaadvisor/data/sector_configs/: banking.json  construction.json  consumer.json  gloves.json  healthcare.json  plantation.json  property.json  reits.json  technology.json  utilities.json
src/bursaadvisor/rules/: fundamentals.py  hard_stops.py  profile.py  suitability.py  technicals.py
src/bursaadvisor/rules/sectors/: banking.py  construction.py  consumer.py  gloves.py  healthcare.py  plantation.py  property.py  reits.py  technology.py  utilities.py
src/bursaadvisor/tui/: display.py  prompts.py
