[project]
name = "bursaadvisor"
version = "0.1.0"
description = "Expert system for Bursa Malaysia stock screening"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "experta==1.9.4",
    "frozendict>=2.3",
    "yfinance>=0.2.50",
    "pandas>=2.0",
    "questionary>=2.0",
    "rich>=13.0",
    "requests>=2.28",
]

[project.scripts]
bursaadvisor = "bursaadvisor.__main__:main"

[tool.uv]
override-dependencies = ["frozendict>=2.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
